[package]
description = "Connectivity manager based on reputation"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "substrate-peerset"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures-preview = "=0.3.0-alpha.17"
libp2p = { git = "https://github.com/mattrutherford/rust-libp2p", branch = "debug-tcp-0.12", default-features = false }
linked-hash-map = "0.5"
log = "0.4"
lru-cache = "0.1.2"
serde_json = "1.0.24"

[dev-dependencies]
rand = "0.6"
