[package]
name = "pallet-staking"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-keyring = { version = "2.0.0-dev", optional = true, path = "../../primitives/keyring" }
sp-std = { version = "2.0.0-dev", default-features = false, path = "../../primitives/std" }
sp-phragmen = { version = "2.0.0-dev", default-features = false, path = "../../primitives/phragmen" }
sp-io ={ path = "../../primitives/io", default-features = false , version = "2.0.0-dev"}
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../../primitives/runtime" }
sp-staking = { version = "2.0.0-dev", default-features = false, path = "../../primitives/staking" }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "2.0.0-dev", default-features = false, path = "../system" }
pallet-session = { version = "2.0.0-dev", features = ["historical"], path = "../session", default-features = false }
pallet-authorship = { version = "2.0.0-dev", default-features = false, path = "../authorship" }
sp-application-crypto = { version = "2.0.0-dev", default-features = false, path = "../../primitives/application-crypto" }

frame-benchmarking = { version = "2.0.0-dev", default-features = false, path = "../benchmarking" }
pallet-indices = { version = "2.0.0-dev", default-features = false, path = "../indices" }
rand_chacha = { version = "0.2", default-features = false  }
rand = { version = "0.7", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-dev", path = "../../primitives/core" }
pallet-balances = { version = "2.0.0-dev", path = "../balances" }
pallet-timestamp = { version = "2.0.0-dev", path = "../timestamp" }
pallet-staking-reward-curve = { version = "2.0.0-dev",  path = "../staking/reward-curve" }
substrate-test-utils = { version = "2.0.0-dev", path = "../../test-utils" }
parking_lot = { version = "0.10.0" }
env_logger = "0.7.1"


[features]
migrate = []
testing-utils = ["std"]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-phragmen/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-indices/std",
	"frame-benchmarking/std",

]
